--- a/public/css/fontello/config.json
+++ b/public/css/fontello/config.json
@@ -121,6 +121,30 @@
       "src": "entypo"
     },
     {
+      "uid": "289b5f92f23acf1059c93fbf401c1ad5",
+      "css": "down-open-big",
+      "code": 59420,
+      "src": "entypo"
+    },
+    {
+      "uid": "884cfc3e6e2d456dd2a2ca0dbb9e6337",
+      "css": "left-open-big",
+      "code": 59421,
+      "src": "entypo"
+    },
+    {
+      "uid": "004882ab2d5c418c5b2060e80596279b",
+      "css": "right-open-big",
+      "code": 59422,
+      "src": "entypo"
+    },
+    {
+      "uid": "0805cca616b3c12714f35af4d0912c10",
+      "css": "up-open-big",
+      "code": 59423,
+      "src": "entypo"
+    },
+    {
       "uid": "978aa8facd816df874039e139cb0cdde",
       "css": "trophy",
       "code": 59406,
@@ -137,6 +161,24 @@
       "css": "rocket-1",
       "code": 59404,
       "src": "entypo"
+    },
+    {
+      "uid": "43fl9m553j1z5937vfjz0lgolrlspxwl",
+      "css": "ok",
+      "code": 59424,
+      "src": "typicons"
+    },
+    {
+      "uid": "dbd39eb5a1d67beb54cfcb535e840e0f",
+      "css": "plus",
+      "code": 59425,
+      "src": "iconic"
+    },
+    {
+      "uid": "9559f17a471856ef50ed266e726cfa25",
+      "css": "minus",
+      "code": 59426,
+      "src": "iconic"
     },
     {
       "uid": "587bjlxppui6u4japooa2foe58rsvicp",
