--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "passport-local": "1.0.0",
     "socket.io": "1.0.6",
     "socketio-jwt": "2.3.4",
-    "swig": "^1.4.2"
+    "swig": "^1.4.2",
+    "tunnel-ssh": "0.0.4"
   },
   "engines": {
     "node": "0.10.x",
