--- a/public/css/fontello/config.json
+++ b/public/css/fontello/config.json
@@ -109,6 +109,12 @@
       "src": "entypo"
     },
     {
+      "uid": "f8513213799b244e66b2836aeee88531",
+      "css": "direction",
+      "code": 59427,
+      "src": "entypo"
+    },
+    {
       "uid": "7f6916533c0842b6cec699fd773693d3",
       "css": "hourglass",
       "code": 59409,
@@ -166,6 +172,12 @@
       "uid": "43fl9m553j1z5937vfjz0lgolrlspxwl",
       "css": "ok",
       "code": 59424,
+      "src": "typicons"
+    },
+    {
+      "uid": "ccf71c505b173c61a2e4e8c8cb907dfa",
+      "css": "chat-alt",
+      "code": 59428,
       "src": "typicons"
     },
     {
