--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cloudinary": "^1.0.11",
     "express": "4.6.1",
     "jsonwebtoken": "0.4.1",
+    "lodash": "^2.4.1",
     "mongoose": "3.8.13",
     "nodemailer": "^1.1.1",
     "passport": "0.2.0",
