--- a/public/css/fontello/config.json
+++ b/public/css/fontello/config.json
@@ -109,6 +109,12 @@
       "src": "entypo"
     },
     {
+      "uid": "64f5a50cf7ac972a56a9a511acb5d28e",
+      "css": "map",
+      "code": 59431,
+      "src": "entypo"
+    },
+    {
       "uid": "f8513213799b244e66b2836aeee88531",
       "css": "direction",
       "code": 59427,
