--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "app",
   "version": "1.0.0",
-  "description": "playing around",
+  "description": "Bamboo nights",
   "main": "index.js",
   "scripts": {
     "start": "node app.js"
@@ -12,7 +12,6 @@
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "1.4.3",
     "cloudinary": "^1.0.11",
-    "debug": "^2.0.0",
     "express": "4.6.1",
     "jsonwebtoken": "0.4.1",
     "lodash": "^2.4.1",
@@ -23,8 +22,7 @@
     "passport-local": "1.0.0",
     "socket.io": "1.0.6",
     "socketio-jwt": "2.3.4",
-    "swig": "^1.4.2",
-    "tunnel-ssh": "0.0.4"
+    "validator": "^3.19.1"
   },
   "engines": {
     "node": "0.10.x",
