--- a/package.json
+++ b/package.json
@@ -16,10 +16,11 @@
     "jsonwebtoken": "0.4.1",
     "lodash": "^2.4.1",
     "mongoose": "3.8.13",
-    "nodemailer": "^1.1.1",
+    "nodemailer": "^1.3.0",
     "nodemon": "^1.2.1",
     "passport": "0.2.0",
     "passport-local": "1.0.0",
+    "rand-token": "^0.2.1",
     "socket.io": "1.0.6",
     "socketio-jwt": "2.3.4",
     "validator": "^3.19.1"
