--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "jsonwebtoken": "0.4.1",
     "lodash": "^2.4.1",
     "mongoose": "3.8.13",
+    "node-schedule": "^0.1.13",
     "nodemailer": "^1.3.0",
     "nodemon": "^1.2.1",
     "passport": "0.2.0",
