--- a/public/css/fontello/config.json
+++ b/public/css/fontello/config.json
@@ -115,6 +115,12 @@
       "src": "mfglabs"
     },
     {
+      "uid": "b622423405bcc984de6553e2f23c9fb6",
+      "css": "barcode-1",
+      "code": 59412,
+      "src": "elusive"
+    },
+    {
       "uid": "26aba7edd46944209b4961670675a813",
       "css": "cog",
       "code": 59408,
