--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "nodemailer": "^1.3.0",
     "nodemon": "^1.2.1",
     "passport": "0.2.0",
+    "passport-facebook": "^1.0.3",
     "passport-local": "1.0.0",
     "rand-token": "^0.2.1",
     "socket.io": "1.0.6",
