--- a/public/css/fontello/config.json
+++ b/public/css/fontello/config.json
@@ -73,9 +73,21 @@
       "src": "fontawesome"
     },
     {
+      "uid": "3d39c828009c04ddb6764c0b04cd2439",
+      "css": "forward-1",
+      "code": 59427,
+      "src": "fontawesome"
+    },
+    {
       "uid": "dcedf50ab1ede3283d7a6c70e2fe32f3",
       "css": "chat",
       "code": 59410,
+      "src": "fontawesome"
+    },
+    {
+      "uid": "00391fac5d419345ffcccd95b6f76263",
+      "css": "attention-alt",
+      "code": 59425,
       "src": "fontawesome"
     },
     {
@@ -88,6 +100,12 @@
       "uid": "f48ae54adfb27d8ada53d0fd9e34ee10",
       "css": "trash-empty",
       "code": 59400,
+      "src": "fontawesome"
+    },
+    {
+      "uid": "107ce08c7231097c7447d8f4d059b55f",
+      "css": "ellipsis",
+      "code": 59424,
       "src": "fontawesome"
     },
     {
@@ -118,6 +136,12 @@
       "uid": "6274e0601f2feef7eced89146e708de0",
       "css": "user-add",
       "code": 59405,
+      "src": "entypo"
+    },
+    {
+      "uid": "c709da589c923ba3c2ad48d9fc563e93",
+      "css": "cancel-2",
+      "code": 59423,
       "src": "entypo"
     },
     {
