--- a/public/css/fontello/config.json
+++ b/public/css/fontello/config.json
@@ -103,6 +103,12 @@
       "src": "fontawesome"
     },
     {
+      "uid": "80cd1022bd9ea151d554bec1fa05f2de",
+      "css": "up-dir",
+      "code": 59426,
+      "src": "fontawesome"
+    },
+    {
       "uid": "107ce08c7231097c7447d8f4d059b55f",
       "css": "ellipsis",
       "code": 59424,
