--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "mongoose": "3.8.13",
     "node-schedule": "0.1.13",
     "nodemailer": "1.3.0",
+    "nodemailer-smtp-transport": "^0.1.13",
     "passport": "0.2.0",
     "passport-local": "1.0.0",
     "rand-token": "0.2.1",
