--- a/public/css/fontello/config.json
+++ b/public/css/fontello/config.json
@@ -115,15 +115,51 @@
       "src": "fontawesome"
     },
     {
+      "uid": "2d6150442079cbda7df64522dc24f482",
+      "css": "down-dir",
+      "code": 59430,
+      "src": "fontawesome"
+    },
+    {
       "uid": "80cd1022bd9ea151d554bec1fa05f2de",
       "css": "up-dir",
       "code": 59426,
       "src": "fontawesome"
     },
     {
+      "uid": "9dc654095085167524602c9acc0c5570",
+      "css": "left-dir",
+      "code": 59431,
+      "src": "fontawesome"
+    },
+    {
+      "uid": "fb1c799ffe5bf8fb7f8bcb647c8fe9e6",
+      "css": "right-dir",
+      "code": 59432,
+      "src": "fontawesome"
+    },
+    {
       "uid": "107ce08c7231097c7447d8f4d059b55f",
       "css": "ellipsis",
       "code": 59424,
+      "src": "fontawesome"
+    },
+    {
+      "uid": "130380e481a7defc690dfb24123a1f0c",
+      "css": "circle",
+      "code": 59434,
+      "src": "fontawesome"
+    },
+    {
+      "uid": "422e07e5afb80258a9c4ed1706498f8a",
+      "css": "circle-empty",
+      "code": 59435,
+      "src": "fontawesome"
+    },
+    {
+      "uid": "5774d0a0e50f6eefc8be01bd761e5dd3",
+      "css": "circle-thin",
+      "code": 59436,
       "src": "fontawesome"
     },
     {
@@ -232,6 +268,12 @@
       "uid": "26aba7edd46944209b4961670675a813",
       "css": "cog",
       "code": 59408,
+      "src": "websymbols"
+    },
+    {
+      "uid": "41eeea14413f2539da21b4d1754bf4be",
+      "css": "arrows-cw",
+      "code": 59433,
       "src": "websymbols"
     }
   ]
