--- a/package.json
+++ b/package.json
@@ -11,13 +11,13 @@
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "1.4.3",
     "cloudinary": "1.0.11",
+    "compression": "^1.4.1",
     "express": "4.6.1",
     "jsonwebtoken": "0.4.1",
     "lodash": "2.4.1",
     "mongoose": "3.8.13",
     "node-schedule": "0.1.13",
     "nodemailer": "1.3.0",
-    "nodetime": "^0.8.15",
     "passport": "0.2.0",
     "passport-local": "1.0.0",
     "rand-token": "0.2.1",
