--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "lodash": "3.7.0",
     "moment": "^2.10.2",
     "mongoose": "^3.8.13",
+    "mongoose-moment": "0.0.1",
     "node-schedule": "0.1.13",
     "nodemailer": "1.3.0",
     "passport": "0.2.0",
