--- a/public/css/fontello/config.json
+++ b/public/css/fontello/config.json
@@ -223,6 +223,12 @@
       "src": "iconic"
     },
     {
+      "uid": "c2152732d525871cf35345955854f711",
+      "css": "moon",
+      "code": 59437,
+      "src": "iconic"
+    },
+    {
       "uid": "ec21fe3492bb04d9e29103c319556ed8",
       "css": "search",
       "code": 59416,
