--- a/public/css/fontello/config.json
+++ b/public/css/fontello/config.json
@@ -199,6 +199,18 @@
       "src": "entypo"
     },
     {
+      "uid": "c77fd2fd065b5fe16d6f2b41e190b266",
+      "css": "pencil",
+      "code": 59439,
+      "src": "entypo"
+    },
+    {
+      "uid": "bcb868184ff9c35f8aef564f50c0d649",
+      "css": "feather",
+      "code": 59438,
+      "src": "entypo"
+    },
+    {
       "uid": "2c0b53280f82068f6bab4e2200025d9f",
       "css": "chat-1",
       "code": 59398,
