--- a/public/css/fontello/config.json
+++ b/public/css/fontello/config.json
@@ -13,6 +13,12 @@
       "src": "fontelico"
     },
     {
+      "uid": "9bc2902722abb366a213a052ade360bc",
+      "css": "spin6",
+      "code": 59444,
+      "src": "fontelico"
+    },
+    {
       "uid": "186dec7a13156bbe2550790c158fb85d",
       "css": "crown",
       "code": 59415,
@@ -34,6 +40,30 @@
       "uid": "ccc2329632396dc096bb638d4b46fb98",
       "css": "mail-alt",
       "code": 59394,
+      "src": "fontawesome"
+    },
+    {
+      "uid": "d73eceadda1f594cec0536087539afbf",
+      "css": "heart",
+      "code": 59445,
+      "src": "fontawesome"
+    },
+    {
+      "uid": "f3dc2d6d8fe9cf9ebff84dc260888cdf",
+      "css": "heart-empty",
+      "code": 59446,
+      "src": "fontawesome"
+    },
+    {
+      "uid": "474656633f79ea2f1dad59ff63f6bf07",
+      "css": "star-1",
+      "code": 59447,
+      "src": "fontawesome"
+    },
+    {
+      "uid": "d17030afaecc1e1c22349b99f3c4992a",
+      "css": "star-empty",
+      "code": 59448,
       "src": "fontawesome"
     },
     {
@@ -79,6 +109,12 @@
       "src": "fontawesome"
     },
     {
+      "uid": "657ab647f6248a6b57a5b893beaf35a9",
+      "css": "lock-open",
+      "code": 59449,
+      "src": "fontawesome"
+    },
+    {
       "uid": "5e2ab018e3044337bcef5f7e94098ea1",
       "css": "thumbs-up-alt",
       "code": 59422,
@@ -88,6 +124,12 @@
       "uid": "3d39c828009c04ddb6764c0b04cd2439",
       "css": "forward-1",
       "code": 59427,
+      "src": "fontawesome"
+    },
+    {
+      "uid": "09feb4465d9bd1364f4e301c9ddbaa92",
+      "css": "retweet",
+      "code": 59443,
       "src": "fontawesome"
     },
     {
@@ -139,6 +181,12 @@
       "src": "fontawesome"
     },
     {
+      "uid": "757afacc32d82967975cbb3b45cfb41b",
+      "css": "desktop",
+      "code": 59440,
+      "src": "fontawesome"
+    },
+    {
       "uid": "107ce08c7231097c7447d8f4d059b55f",
       "css": "ellipsis",
       "code": 59424,
@@ -169,8 +217,14 @@
       "src": "fontawesome"
     },
     {
-      "uid": "25b34dea4784f72c710454f32ff8fa2b",
-      "css": "star",
+      "uid": "e9107949dd6c9e8ab2b29ae07156e38c",
+      "css": "linkedin",
+      "code": 59442,
+      "src": "fontawesome"
+    },
+    {
+      "uid": "fda731b5a4026685e1a9c7e64228e2b2",
+      "css": "note-beamed",
       "code": 59402,
       "src": "entypo"
     },
@@ -262,6 +316,12 @@
       "uid": "a7289537a68b15b24bd4e3ee1ac20dfa",
       "css": "help",
       "code": 59418,
+      "src": "elusive"
+    },
+    {
+      "uid": "abe051e31ad705400cf6226b24b6e828",
+      "css": "desktop-1",
+      "code": 59441,
       "src": "elusive"
     },
     {
