auto input resize ok

--- a/public/css/fontello/config.json
+++ b/public/css/fontello/config.json
@@ -331,6 +331,18 @@
       "src": "elusive"
     },
     {
+      "uid": "51d26008d35b3c8b15a48f49e2b08860",
+      "css": "male-1",
+      "code": 59450,
+      "src": "elusive"
+    },
+    {
+      "uid": "471497b78b90ca63aa21b13bf4c46cf4",
+      "css": "female-1",
+      "code": 59451,
+      "src": "elusive"
+    },
+    {
       "uid": "7b16b22168e762c88333f465da862098",
       "css": "ok-1",
       "code": 59419,
