--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "passport-local": "1.0.0",
     "pusher": "^1.0.4",
     "rand-token": "0.2.1",
+    "redis": "^0.12.1",
     "request": "^2.60.0",
     "sendgrid": "^1.6.1",
     "serve-favicon": "^2.2.0",
