--- a/public/css/fontello/config.json
+++ b/public/css/fontello/config.json
@@ -331,6 +331,12 @@
       "src": "entypo"
     },
     {
+      "uid": "289b5f92f23acf1059c93fbf401c1ad5",
+      "css": "down-open-big",
+      "code": 59469,
+      "src": "entypo"
+    },
+    {
       "uid": "884cfc3e6e2d456dd2a2ca0dbb9e6337",
       "css": "left-open-big",
       "code": 59411,
@@ -340,6 +346,12 @@
       "uid": "004882ab2d5c418c5b2060e80596279b",
       "css": "right-open-big",
       "code": 59413,
+      "src": "entypo"
+    },
+    {
+      "uid": "0805cca616b3c12714f35af4d0912c10",
+      "css": "up-open-big",
+      "code": 59468,
       "src": "entypo"
     },
     {
