--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "compression": "^1.4.1",
     "cookie-parser": "^1.3.4",
     "express": "4.6.1",
+    "ipware": "0.0.7",
     "jsonwebtoken": "^5.0.0",
     "lodash": "3.7.0",
     "moment": "^2.10.2",
