--- a/public/css/fontello/config.json
+++ b/public/css/fontello/config.json
@@ -7,21 +7,57 @@
   "ascent": 850,
   "glyphs": [
     {
+      "uid": "4dd56d61fd0dab19277824da301424b3",
+      "css": "evil",
+      "code": 59471,
+      "src": "fontelico"
+    },
+    {
+      "uid": "bb68a13a3574b087d4350eff0b8d48e3",
+      "css": "horney",
+      "code": 59478,
+      "src": "fontelico"
+    },
+    {
       "uid": "48cc210e59ff4bc56b6c8fba6eb384b8",
-      "css": "emo-coffee",
+      "css": "peace",
+      "code": 59475,
+      "src": "fontelico"
+    },
+    {
+      "uid": "078fec38562c3f83a1201a908040c141",
+      "css": "chill",
       "code": 59392,
+      "src": "fontelico"
+    },
+    {
+      "uid": "3a900d0e9f43f5409211f62bec557379",
+      "css": "cheers",
+      "code": 59472,
+      "src": "fontelico"
+    },
+    {
+      "uid": "cbc328d1c779a2b9e3b1199d904199a5",
+      "css": "happy",
+      "code": 59470,
+      "src": "fontelico"
+    },
+    {
+      "uid": "5195e2dcb4a63fbb8c09896a8058f6ab",
+      "css": "innocent",
+      "code": 59476,
+      "src": "fontelico"
+    },
+    {
+      "uid": "fc92480dedc439d274d4e3e4b425edf4",
+      "css": "drunk",
+      "code": 59477,
       "src": "fontelico"
     },
     {
       "uid": "9bc2902722abb366a213a052ade360bc",
       "css": "spin6",
       "code": 59444,
-      "src": "fontelico"
-    },
-    {
-      "uid": "186dec7a13156bbe2550790c158fb85d",
-      "css": "crown",
-      "code": 59415,
       "src": "fontelico"
     },
     {
@@ -449,6 +485,18 @@
       "css": "female-1",
       "code": 59451,
       "src": "elusive"
+    },
+    {
+      "uid": "0817b47d6e5f1d85f2428640a021f0c4",
+      "css": "star",
+      "code": 59415,
+      "src": "linecons"
+    },
+    {
+      "uid": "5b1a68729f60f8be3769238379d1b8e9",
+      "css": "comment",
+      "code": 59474,
+      "src": "linecons"
     },
     {
       "uid": "7b16b22168e762c88333f465da862098",
