--- a/public/css/fontello/config.json
+++ b/public/css/fontello/config.json
@@ -391,6 +391,12 @@
       "src": "entypo"
     },
     {
+      "uid": "78944e4652d6f9b8b506eaef331308cd",
+      "css": "down-bold",
+      "code": 59473,
+      "src": "entypo"
+    },
+    {
       "uid": "ef74ff62feda486fd414410e782b598a",
       "css": "graduation-cap",
       "code": 59459,
