--- a/public/css/fontello/config.json
+++ b/public/css/fontello/config.json
@@ -145,6 +145,12 @@
       "src": "fontawesome"
     },
     {
+      "uid": "861ab06e455e2de3232ebef67d60d708",
+      "css": "minus",
+      "code": 59479,
+      "src": "fontawesome"
+    },
+    {
       "uid": "ce3cf091d6ebd004dd0b52d24074e6e3",
       "css": "help-1",
       "code": 59421,
