--- a/public/css/fontello/config.json
+++ b/public/css/fontello/config.json
@@ -493,6 +493,12 @@
       "src": "elusive"
     },
     {
+      "uid": "64abb7c56aefca89046bb69f7251d2e2",
+      "css": "calendar",
+      "code": 59483,
+      "src": "elusive"
+    },
+    {
       "uid": "abe051e31ad705400cf6226b24b6e828",
       "css": "desktop-1",
       "code": 59441,
