--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "async": "^0.9.2",
     "bcrypt-nodejs": "0.0.3",
     "bluebird": "^3.3.4",
+    "blueimp-md5": "^2.3.0",
     "body-parser": "1.4.3",
     "cloudinary": "1.0.11",
     "compression": "^1.4.1",
