--- a/package.json
+++ b/package.json
@@ -9,35 +9,35 @@
   },
   "author": "Radioreve",
   "dependencies": {
-    "async": "^0.9.2",
+    "async": "^2.0.0-rc.3",
     "bcrypt-nodejs": "0.0.3",
     "bluebird": "^3.3.4",
     "blueimp-md5": "^2.3.0",
-    "body-parser": "1.4.3",
-    "cloudinary": "1.0.11",
+    "body-parser": "1.15.0",
+    "cloudinary": "1.3.1",
     "compression": "^1.4.1",
     "cookie-parser": "^1.3.4",
-    "express": "4.6.1",
-    "ipware": "0.0.7",
-    "jsonwebtoken": "^5.0.0",
-    "lodash": "3.7.0",
+    "express": "4.13.4",
+    "ipware": "0.0.8",
+    "jsonwebtoken": "^6.2.0",
+    "lodash": "4.11.2",
     "moment": "^2.10.2",
-    "mongoose": "4.3.1",
-    "node-schedule": "0.1.13",
+    "mongoose": "4.4.14",
+    "node-schedule": "1.1.0",
     "node-validator": "^0.1.13",
-    "nodemailer": "1.3.0",
+    "nodemailer": "2.3.2",
     "pusher": "^1.0.4",
     "rand-token": "0.2.1",
-    "redis": "^0.12.1",
+    "redis": "^2.6.0-2",
     "request": "^2.60.0",
-    "sendgrid": "^1.6.1",
+    "sendgrid": "^2.0.0",
     "serve-favicon": "^2.2.0",
     "swig": "^1.4.2",
-    "validator": "3.19.1"
+    "validator": "5.2.0"
   },
   "devDependencies": {
     "autoprefixer": "^6.1.0",
-    "del": "^1.2.1",
+    "del": "^2.2.0",
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.0",
     "gulp-cssbeautify": "^0.1.3",
