connecter + refactor + clean + bug fixs

--- a/public/css/lib/fontello/config.json
+++ b/public/css/lib/fontello/config.json
@@ -774,7 +774,7 @@
     },
     {
       "uid": "dd1eefb794d570e2546eebccdfe3956a",
-      "css": "mail-1",
+      "css": "mail",
       "code": 59434,
       "src": "custom_icons",
       "selected": true,
