--- a/public/css/lib/fontello/config.json
+++ b/public/css/lib/fontello/config.json
@@ -1137,6 +1137,48 @@
       ]
     },
     {
+      "uid": "7af94fc69c712b7496236fbc22b1dded",
+      "css": "cross-medium",
+      "code": 59475,
+      "src": "custom_icons",
+      "selected": true,
+      "svg": {
+        "path": "M618.8 500L975.4 143.5C1008.2 110.6 1008.2 57.4 975.4 24.6 942.6-8.2 889.4-8.2 856.5 24.6L500 381.2 143.5 24.6C110.6-8.2 57.4-8.2 24.6 24.6-8.2 57.4-8.2 110.6 24.6 143.5L381.2 500 24.6 856.5C-8.2 889.4-8.2 942.6 24.6 975.4 57.4 1008.2 110.6 1008.2 143.5 975.4L500 618.8 856.5 975.4C889.4 1008.2 942.6 1008.2 975.4 975.4 1008.2 942.6 1008.2 889.4 975.4 856.5L618.8 500 618.8 500Z",
+        "width": 1000
+      },
+      "search": [
+        "cross-medium"
+      ]
+    },
+    {
+      "uid": "f5d25ee4f85c705ce0391e4b9c33319f",
+      "css": "cross-thin",
+      "code": 59476,
+      "src": "custom_icons",
+      "selected": true,
+      "svg": {
+        "path": "M588.4 500L981.7 106.8C1006.1 82.3 1006.1 42.7 981.7 18.3 957.2-6.1 917.7-6.1 893.2 18.3L500 411.6 106.8 18.3C82.3-6.1 42.8-6.1 18.3 18.3-6.1 42.7-6.1 82.3 18.3 106.8L411.6 500 18.3 893.2C-6.1 917.6-6.1 957.2 18.3 981.7 30.5 993.9 46.5 1000 62.5 1000 78.5 1000 94.5 993.9 106.8 981.6L500 588.4 893.2 981.6C905.5 993.9 921.5 1000 937.5 1000 953.5 1000 969.5 993.9 981.7 981.6 1006.1 957.2 1006.1 917.6 981.7 893.2L588.4 500 588.4 500Z",
+        "width": 1000
+      },
+      "search": [
+        "cross-thin"
+      ]
+    },
+    {
+      "uid": "329a095c06e3b5492cc3381c6354d990",
+      "css": "cross-fat",
+      "code": 59477,
+      "src": "custom_icons",
+      "selected": true,
+      "svg": {
+        "path": "M966.2 197L663.2 500 966.2 803C1011.3 848.1 1011.3 921.1 966.2 966.2 943.7 988.7 914.2 1000 884.6 1000 855.1 1000 825.6 988.7 803.1 966.2L500 663.2 197 966.2C174.4 988.7 144.9 1000 115.4 1000 85.9 1000 56.4 988.7 33.8 966.2-11.2 921.1-11.2 848.1 33.8 803L336.8 500 33.8 197C-11.3 151.9-11.3 78.8 33.8 33.8 78.9-11.3 151.9-11.3 196.9 33.8L500 336.8 803 33.8C848.1-11.3 921.1-11.3 966.2 33.8 1011.3 78.8 1011.3 151.9 966.2 197L966.2 197Z",
+        "width": 1000
+      },
+      "search": [
+        "cross-fat"
+      ]
+    },
+    {
       "uid": "a2a93e0332d27ae46227c5fa86024578",
       "css": "birthday",
       "code": 59402,
