with important on css and new clock

--- a/public/css/lib/fontello/config.json
+++ b/public/css/lib/fontello/config.json
@@ -185,20 +185,6 @@
       ]
     },
     {
-      "uid": "39b2a2c53cf6c3c041fd514cff4af28d",
-      "css": "clock-empty",
-      "code": 59414,
-      "src": "custom_icons",
-      "selected": true,
-      "svg": {
-        "path": "M500 942.5L500 942.5C743.9 942.5 942.5 743.9 942.5 500 942.5 256.1 743.9 57.5 500 57.5 256 57.5 57.5 256.1 57.5 500 57.5 744 256 942.5 500 942.5L500 942.5ZM500 1000C224.3 1000 0 775.7 0 500 0 224.3 224.3 0 500 0 775.7 0 1000 224.3 1000 500 1000 775.7 775.7 1000 500 1000L500 1000ZM773.9 556L438.4 556 438.4 235.6C438.4 201.1 466.1 173.1 500.3 173.1 534.4 173.1 562.1 201.1 562.1 235.6L562.1 431 773.9 431C808 431 835.7 459 835.7 493.5 835.7 528 808 556 773.9 556L773.9 556Z",
-        "width": 1000
-      },
-      "search": [
-        "clock-empty"
-      ]
-    },
-    {
       "uid": "3dbd82383a4ca72ff5a6997c58edc1b5",
       "css": "check",
       "code": 59413,
@@ -1543,6 +1529,20 @@
       ]
     },
     {
+      "uid": "41bc891f7498bee5f71811164cb03f61",
+      "css": "clock-empty",
+      "code": 59414,
+      "src": "custom_icons",
+      "selected": true,
+      "svg": {
+        "path": "M500 942.5L500 942.5C743.9 942.5 942.5 743.9 942.5 500 942.5 256.1 743.9 57.5 500 57.5 256 57.5 57.5 256.1 57.5 500 57.5 744 256 942.5 500 942.5L500 942.5ZM500 1000C224.3 1000 0 775.7 0 500 0 224.3 224.3 0 500 0 775.7 0 1000 224.3 1000 500 1000 775.7 775.7 1000 500 1000L500 1000ZM462.5 210C462.5 189.3 479.3 172.5 500 172.5 520.7 172.5 537.5 189.3 537.5 210L537.5 455 462.5 455 462.5 210ZM800 455C820.7 455 837.5 471.8 837.5 492.5 837.5 513.2 820.7 530 800 530L462.5 530 462.5 455 800 455Z",
+        "width": 1000
+      },
+      "search": [
+        "clock-empty"
+      ]
+    },
+    {
       "uid": "b5475acc53091d35fead89e1d5c7ecb6",
       "css": "chat-bubble",
       "code": 59410,
@@ -1554,6 +1554,20 @@
       },
       "search": [
         "chat-bubble"
+      ]
+    },
+    {
+      "uid": "39b2a2c53cf6c3c041fd514cff4af28d",
+      "css": "clock-empty",
+      "code": 59414,
+      "src": "custom_icons",
+      "selected": false,
+      "svg": {
+        "path": "M500 942.5L500 942.5C743.9 942.5 942.5 743.9 942.5 500 942.5 256.1 743.9 57.5 500 57.5 256 57.5 57.5 256.1 57.5 500 57.5 744 256 942.5 500 942.5L500 942.5ZM500 1000C224.3 1000 0 775.7 0 500 0 224.3 224.3 0 500 0 775.7 0 1000 224.3 1000 500 1000 775.7 775.7 1000 500 1000L500 1000ZM773.9 556L438.4 556 438.4 235.6C438.4 201.1 466.1 173.1 500.3 173.1 534.4 173.1 562.1 201.1 562.1 235.6L562.1 431 773.9 431C808 431 835.7 459 835.7 493.5 835.7 528 808 556 773.9 556L773.9 556Z",
+        "width": 1000
+      },
+      "search": [
+        "clock-empty"
       ]
     }
   ]
