--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "clean": "rm -r public/dist",
-    "start": "node app.js"
+    "start": "node app.js",
+    "preinstall": "gulp build"
   },
   "author": "Radioreve",
   "dependencies": {
