--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "Meefore",
   "version": "0.9.9",
   "description": "Trouver un before pres de chez soi",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "clean": "rm -r public/dist",
     "start": "node app.js",
@@ -15,6 +15,7 @@
     "bluebird": "^3.3.4",
     "blueimp-md5": "^2.3.0",
     "body-parser": "1.15.0",
+    "bunyan": "1.8.1",
     "cloudinary": "1.3.1",
     "compression": "^1.4.1",
     "cookie-parser": "^1.3.4",
